validate email routes added with swagger docs
